buildd (0.10) UNRELEASED; urgency=low

  * Initial buildd packaging.

 -- Roger Leigh <rleigh@debian.org>  Sat, 26 Aug 2006 11:33:02 +0100